# ai-trading-agent

./: .dockerignore  .env  .gitignore  DATAFRAME_VERIFICATION.md  Dockerfile  ENHANCED_CAPABILITIES.md  PYTHON_DOTENV_INTEGRATION.md  README.md  STRATEGY_COMPLETE.md  TWITTER_RATE_LIMIT_SOLUTIONS.md  complete_integration_test.py  dotenv_integration_test.py  dotenv_integration_test_20250804_180209.csv  dotenv_integration_test_20250804_180240.csv  final_integration_test.py  live_data_test.py  pyproject.toml  quick_api_test.py  requirements.txt  test_combined_data.csv  test_complete_functionality.py  trading_data_20250804_175423.csv  trading_data_20250804_180714.csv  trading_data_20250804_180743.csv  trading_data_20250804_180829.csv  trading_data_20250804_181339.csv  trading_data_20250805_232050.csv  trading_signals_20250805_232210.csv  twitter_fast_test.py  verify_dataframes.py
.github/workflows/: ci.yml
config/: settings.json
data/: trading_data_20250808_154636.csv  trading_data_20250810_141525.csv  trading_data_latest.csv  trading_signals_20250808_154641.csv  trading_signals_latest.csv
docs/: AI_AGENT_REQUIREMENTS.md  API_SETUP_GUIDE.md
scripts/: final_integration_test.py  simple_data_collector.py
src/: main.py  scheduler.py
src/data/: alpha_vantage.py  fundamentals.py
src/ingestion/: news.py  reddit.py  twitter.py
src/signals/: __init__.py  catalyst.py  etf_premium_discount.py  macro_filter.py  sector_rotation.py  (+3 more)
strategies/: leveraged_etf_strategy.py  momentum_smallcap_strategy.py  momentum_strategy.py
tests/: test_signals.py  test_signals_api.py
